# nonebot_plugin_styledstr

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_check.yml  coverage.yml  pypi.yml  pyright.yml  qa.yml  unittest.yml
docs/: usage.md
nonebot_plugin_styledstr/: __init__.py  config.py  exception.py  styledstr.py  utils.py
tests/: conftest.py  test_export.py  test_handle_placeholder.py  test_import_export.py  test_load_preset.py  test_parse_token.py
tests/assets/: alter.yaml  alter.yml  test.yaml
tests/assets/test_import/: alter.yaml  test.yaml
tests/assets/test_load_same_preset/load_json_yaml_yml/: load.json  load.yaml  load.yml
