[tool.poetry]
name = "nonebot-plugin-styledstr"
version = "0.4.0"
description = "A Styled String Managing Plugin for Nonebot 2"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.4.1"
nonebot2 = "^2.0.0-alpha.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pigar = "^0.10.0"
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
